03/datetime/base/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datetime
spec:
  selector:
    matchLabels:
      app: datetime
  template:
    metadata:
      labels:
        app: datetime
    spec:
      containers:
      - name: datetime
        image: nginx
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            port: 8080
            path: /healthz
          failureThreshold: 3
          initialDelaySeconds: 15
          successThreshold: 1
          timeoutSeconds: 15
          periodSeconds: 30
        livenessProbe:
          httpGet:
            port: 8080
            path: /healthz
          failureThreshold: 3
          initialDelaySeconds: 5
          successThreshold: 1
          timeoutSeconds: 15
          periodSeconds: 30
        imagePullPolicy: IfNotPresent
