03/datetime/base/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datetime
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: datetime
