03/datetime/base/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datetime
spec:
  rules:
    - host: "datetime.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datetime
                port:
                  number: 80
